fix: horizontal scrolling in drawer

--- a/apps/frontend/src/app/components/header/header.component.scss
+++ b/apps/frontend/src/app/components/header/header.component.scss
@@ -217,6 +217,7 @@
       display: inline-block;
       @media screen and (max-width: 992px) {
         width: 100%;
+        box-sizing: border-box;
       }
     }
   }
